Task 17. Fixing horizontal align

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -75,7 +75,7 @@ a:active {
     padding-right: var(--section-footer-padding);
     padding-top: var(--section-footer-padding);
     padding-bottom: var(--section-footer-padding);
-    align-items: var(--section-footer-align);
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
